--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -38,8 +38,9 @@ grafana_http_addr: '127.0.0.1'
 grafana_http_port: '3000'
 grafana_domain: 'localhost'
 grafana_root_url: '/grafana'
-grafana_install_plugins: False
 grafana_rgm_dashboards: "{{ rgm_root_path }}/grafana/dashboards"
+grafana_install_plugins_core: True
+grafana_install_plugins_contrib: False
 
 # Windows Beats installation base patch
 winbeats_base_path: 'C:\Program Files'
