--- a/tasks/distrib.yml
+++ b/tasks/distrib.yml
@@ -47,7 +47,7 @@
   retries: 3
   delay: 2
   register: distrib_packages_downloaded
-  until: distrib_packages_downloaded.rc == 0
+  until: not distrib_packages_downloaded.failed|bool
 
 - name: set 'latest' symlinks
   file:
