--- a/tasks/prometheus.yml
+++ b/tasks/prometheus.yml
@@ -24,13 +24,19 @@
 - name: set .my.cnf for prometheus user
   template:
     src: mariadb/my.cnf.j2
-    dest: /var/lib/prometheus/.my.cnf
+    dest: "{{ prometheus_mysql_cnf }}"
     owner: root
     group: root
     mode: 0600
   vars:
-    mariadbuser: mariadb_prometheus_user
-    mariadbpasswd: mariadb_prometheus_pwd
+    mariadbuser: "{{ mariadb_prometheus_user }}"
+    mariadbpasswd: "{{ mariadb_prometheus_pwd }}"
+
+- name: "configure mysqld_exporter service"
+  lineinfile:
+    path: /etc/sysconfig/promotheus/mysqld_exporter
+    regexp: '^(#\s*)?MYSQLD_EXPORTER_OPTS='
+    line: "MYSQLD_EXPORTER_OPTS='--config.my-cnf={{ prometheus_mysql_cnf }} --web.listen-address=127.0.0.1:9104'"
 
 
 # https://docs.influxdata.com/influxdb/v1.5/administration/server_monitoring/#influxdb-metrics-http-endpoint
