--- a/tasks/elastic.yml
+++ b/tasks/elastic.yml
@@ -88,21 +88,31 @@
   notify: service_restart_metricbeat
  
 - name: enable prometheus module for metricbeat
-  command: "mv /etc/metricbeat/modules.d{{ item }}.disabled /etc/metricbeat/modules.d{{ item }}"
+  command: "mv /etc/metricbeat/modules.d/{{ item }}.disabled /etc/metricbeat/modules.d/{{ item }}"
   args:
-    creates: "/etc/metricbeat/modules.d{{ item }}"
+    creates: "/etc/metricbeat/modules.d/{{ item }}"
   with_items:
   - prometheus.yml
   - apache.yml
   - kibana.yml
   - mysql.yml
 
+- name: "configure metricsets mysql metricbeat"
+  lineinfile:
+    path: /etc/metricbeat/modules.d/mysql.yml
+    regexp: "{{ item.regex }}"
+    line: "{{ item.line }}"
+    insertafter: "{{ item.after }}"
+  with_items:
+  - { regex: '^(\s*#\s*)?metricsets: ',     line: '  metricsets:', after: '- module: mysql' }
+  - { regex: '^(\s*#\s*)?- status',     line: '  - status', after: '^\s+metricsets:' }
+
 - name: "configure DSN for mysql metricbeat"
   lineinfile:
     path: /etc/metricbeat/modules.d/mysql.yml
     regexp: '^(\s*hosts: \[").*("\])$'
     backrefs: yes
-    line: "\\1{{ mariadb_prometheus_user }}:{{ mariadb_prometheus_pwd }}@tcp(127.0.0.1:3306)\\2"
+    line: "\\1{{ mariadb_ro_user }}:{{ mariadb_ro_pwd }}@tcp(127.0.0.1:3306)/\\2"
 
 
 
