--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -127,7 +127,7 @@
     ssh_key_bits: 2048
     ssh_key_file: .ssh/id_rsa
     update_password: on_create
-    password: "{{ rgm_user_password }}"
+    password: "{{ rgm_user_password | password_hash('sha512', lookup('password', '/dev/null length=16 chars=ascii_letters,digits,-,_,!,.,*')) }}"
 
 ### configure chronyd
 - name: configure chrony daemon
