--- a/vars/main.yml
+++ b/vars/main.yml
@@ -82,20 +82,21 @@ oneliner_items:
   config_files:
   - windows_metricbeat.yml
   upstream_files:
-  - https://artifacts.elastic.co/downloads/beats/metricbeat/metricbeat-oss-6.7.1-windows-x86_64.zip
-  - https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-oss-6.7.1-windows-x86_64.zip
-  - https://artifacts.elastic.co/downloads/beats/winlogbeat/winlogbeat-oss-6.7.1-windows-x86_64.zip
-  - https://artifacts.elastic.co/downloads/beats/auditbeat/auditbeat-oss-6.7.1-windows-x86_64.zip
-  - https://artifacts.elastic.co/downloads/beats/heartbeat/heartbeat-oss-6.7.1-windows-x86_64.zip
-  #- https://artifacts.elastic.co/downloads/beats/packetbeat/packetbeat-oss-6.7.1-windows-x86_64.zip  
+  - https://artifacts.elastic.co/downloads/beats/metricbeat/metricbeat-oss-7.2.1-windows-x86_64.zip
+  - https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-oss-7.2.1-windows-x86_64.zip
+  - https://artifacts.elastic.co/downloads/beats/winlogbeat/winlogbeat-oss-7.2.1-windows-x86_64.zip
+  - https://artifacts.elastic.co/downloads/beats/auditbeat/auditbeat-oss-7.2.1-windows-x86_64.zip
+  - https://artifacts.elastic.co/downloads/beats/heartbeat/heartbeat-oss-7.2.1-windows-x86_64.zip
+  #- https://artifacts.elastic.co/downloads/beats/packetbeat/packetbeat-oss-7.2.1-windows-x86_64.zip  
 - item: linux_metricbeat
   shell: "bash"
   markdown_instruction: linux_metricbeat_instructions.md
   markdown_help: ''
-  command: bash <(curl -k "https://{{ ansible_default_ipv4.address }}/distrib/install/linux-metricbeat.sh)"
+  command: bash <(curl -k "https://{{ ansible_default_ipv4.address }}/distrib/install/Install-MetricBeat.sh)"
   tags:
   - 1
   - 5
   config_files:
   - linux_metricbeat.yml
-  
+  upstream_files:
+  - https://community.repo.rgm-cloud.io/rgm/latest/updates/x86_64/Packages/metricbeat-oss-7.2.1-x86_64.rpm
