update mlocate database after RGM install

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -335,3 +335,6 @@
     enabled: yes
     state: started
   with_items: "{{ rgm_services }}"
+
+- name: update mlocate database
+  command: /usr/bin/updatedb -f "$nodevs"
