--- a/vars/main.yml
+++ b/vars/main.yml
@@ -87,7 +87,10 @@ oneliner_items:
   - https://artifacts.elastic.co/downloads/beats/winlogbeat/winlogbeat-oss-7.2.1-windows-x86_64.zip
   - https://artifacts.elastic.co/downloads/beats/auditbeat/auditbeat-oss-7.2.1-windows-x86_64.zip
   - https://artifacts.elastic.co/downloads/beats/heartbeat/heartbeat-oss-7.2.1-windows-x86_64.zip
-  #- https://artifacts.elastic.co/downloads/beats/packetbeat/packetbeat-oss-7.2.1-windows-x86_64.zip  
+  #- https://artifacts.elastic.co/downloads/beats/packetbeat/packetbeat-oss-7.2.1-windows-x86_64.zip 
+  regex_pattern: '^.*\\/(?P<prefix>\\w+-oss-).*(?P<suffix>-win.+)$'
+  regex_replace: '\\g<prefix>latest\\g<suffix>'
+
 - item: linux_metricbeat
   shell: "bash"
   markdown_instruction: linux_metricbeat_instructions.md
@@ -100,3 +103,5 @@ oneliner_items:
   - linux_metricbeat.yml
   upstream_files:
   - https://community.repo.rgm-cloud.io/rgm/latest/updates/x86_64/Packages/metricbeat-oss-7.2.1-x86_64.rpm
+  regex_pattern: '^.*\\/(?P<prefix>\\w+-oss-).*(?P<suffix>-x86.+)$'
+  regex_replace: '\\g<prefix>latest\\g<suffix>'
